# SampleWork

./: README.md
AssortmentPlanning/src/algorithms/: greedy_forward_selection.py
AssortmentPlanning/src/data/: __init__.py  particles.py
AssortmentPlanning/src/settings/: simulated_problem.py
PSO/src/: particles.py  pso.py  simulated_problem.py
mortgage_app/: compute_payment.py  plots.py  pyproject.toml
mortgage_app/easy_mortgage_comparison/easy_mortgage_comparison/plotting/: plots.py
